# paccs

./: .gitmodules  README.md
client/: .gitignore  README.md  package.json
client/src/: circuit.circom  power_14_hash
client/test/: test.js
contracts/: README.md  deploy.sh  foundry.toml
contracts/src/: Exchange.sol  Paccs.sol  Token.sol
contracts/test/: Paccs.t.sol
docs/: specs.md
zkp/: Cargo.toml  README.md
zkp/benches/: paccs.rs
zkp/src/: gadget.rs
zkp/tests/: paccs.rs
