[package]
name = "zkp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dusk-plonk = { version = "0.19", default-features = false, features = ["std", "rkyv-impl", "alloc"] }
poseidon-merkle = { version = "0.5", features = ["rkyv-impl", "zk", "size_32"] }
ff = { version = "0.13", default-features = false }
rand_core = { version = "0.6", default-features=false, features = ["getrandom"] }
dusk-poseidon = { version = "0.33", default-features = false, features = ["rkyv-impl", "alloc", "size_32", "merkle"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "paccs"
harness = false

[features]
rkyv-impl = []
default=["rkyv-impl"]